--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -3,91 +3,33 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>inbox.dr | results</title>
-<link rel="shortcut icon" href="../favicon.png" /> 
-<link rel="stylesheet" type="text/css" href="" />
-<style type="text/css">
-@font-face {
-    font-family: 'nevisBold';
-    src: url('font/nevis-webfont.eot');
-    src: url('font/nevis-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/nevis-webfont.woff') format('woff'),
-         url('font/nevis-webfont.ttf') format('truetype'),
-         url('font/nevis-webfont.svg#nevisBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-	}
-body {
-	width:900px;
-	margin-left:auto;
-	margin-right:auto;
-	background:url('{{STATIC_URL}}bg.jpg') repeat-x;
-	font-family:Verdana;
-	font-size:12px;
-	}
-#logo {
-	margin-top:25px;
-	text-decoration:none;
-	}
-#dashboard {
-	float:left;
-	width:190px;
-	height:100%;
-	border:2px #B5B7B9 solid;
-	border-radius:15px;
-	-moz-border-radius:15px;
-	-webkit-box-shadow: 5px 5px 1px #B5B7B9;
-	box-shadow: 5px 5px 1px #B5B7B9;
-}
-#results {
-	padding:5px;
-	margin:0 0 5px 30px;
-	float:left;
-	width:640px;
-	height:100%;
-	border:2px #B5B7B9 solid;
-	border-radius:15px;
-	-moz-border-radius:15px;
-	-webkit-box-shadow: 5px 5px 1px #B5B7B9;
-	box-shadow: 5px 5px 1px #B5B7B9;
-}
-ul {
-	margin-left:-25px;
-	list-style:none;
-}
-.category {
-	padding-left:15px;
-	font-family:nevisBold;
-	font-size:24px;
-	border-radius:10px 10px 0 0;
-	-moz-border-radius:15px;
-	color:#FFFFFF;
-	background:#28AAE1;
-}
-.description {
-	margin-bottom: 10px;
-</style>
+<!--<link rel="shortcut icon" href="/media/images/favicon.png" /> -->
+<link rel="stylesheet" type="text/css" href="/media/css/style.css" />
 
 <!--GRAPH CODE-->
-
 <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
+
+<link rel="stylesheet" href="/media/jQRangeSlider/css/dev.css">  
+<script src="/media/js/jquery.js"></script>
+<script src="/media/js/jquery-ui.js"></script>
+<script src="/media/js/base.js"></script>
+<script src="/media/jQRangeSlider/jQRangeSlider.js"></script>
+<script src="/media/jQRangeSlider/jQDateRangeSlider.js"></script>
+
+
+
 <script type="text/javascript">
       google.load('visualization', '1', {packages: ['corechart']});
-    </script>
+</script>
 <script type="text/javascript">
-    function byHour(){
-    	$.getJSON("/emailanalysis/byhour/json/", {start:"2010-9-20", end:"2011-3-10", daysofweek:"0,6"}, function(data){
+    function byHour(start, end){
+    	$.getJSON("/emailanalysis/byhour/json/", {start:start, end:end, reply:true, email:"zheny"}, function(data){
     		drawVisualization(data);
     	});
     };
     function initVisualization(){
      	$.getJSON("/emailanalysis/topsenders/json/",{},function(data){
     		 drawVisualization(data);
-/*     		$.each(data, function(i,item) {
-    		 
-    		alert(item);
-    		 
-    		}); */
     	}); 
     };
 /*         $.ajax({
@@ -108,13 +50,11 @@ ul {
 
 //         var jsonOutput = {"y": [25.0, 18.0, 17.0, 16.0, 18.0, 11.0, 10.0, 4.0, 7.0, 4.0, 4.0, 12.0, 11.0, 21.0, 39.0, 33.0, 44.0, 53.0, 72.0, 57.0, 58.0, 34.0, 31.0, 33.0],
 //				"labels": ["2000-01-01 00:00:00", "2000-01-01 01:00:00", "2000-01-01 02:00:00", "2000-01-01 03:00:00", "2000-01-01 04:00:00", "2000-01-01 05:00:00", "2000-01-01 06:00:00", "2000-01-01 07:00:00", "2000-01-01 08:00:00", "2000-01-01 09:00:00", "2000-01-01 10:00:00", "2000-01-01 11:00:00", "2000-01-01 12:00:00", "2000-01-01 13:00:00", "2000-01-01 14:00:00", "2000-01-01 15:00:00", "2000-01-01 16:00:00", "2000-01-01 17:00:00", "2000-01-01 18:00:00", "2000-01-01 19:00:00", "2000-01-01 20:00:00", "2000-01-01 21:00:00", "2000-01-01 22:00:00", "2000-01-01 23:00:00"]};
-         
-         
-         //var jsonOutput = {[304, 257, 160, 125, 87, 71, 70, 68, 67, 64, 59, 57, 55, 54, 53, 48, 47, 41, 38], ["sirrice@gmail.com", "shwang08@gmail.com", "tiffchen08@gmail.com", "farm.cp@gmail.com", "yunjiema@gmail.com", "karenshu@gmail.com", "brett.warne@gmail.com", "winkler.em@gmail.com", "niv.chandra@gmail.com", "ravdawg@gmail.com", "melty710@gmail.com", "irenefan@gmail.com", "jen.lee.ing@gmail.com", "wysun07@gmail.com", "wenfai@gmail.com", "shi.jiarui@gmail.com", "jtaschereau84@gmail.com", "hkorre@gmail.com", "jlee08@gmail.com"]};
+       
+//var jsonOutput = {[304, 257, 160, 125, 87, 71, 70, 68, 67, 64, 59, 57, 55, 54, 53, 48, 47, 41, 38], ["sirrice@gmail.com", "shwang08@gmail.com", "tiffchen08@gmail.com", "farm.cp@gmail.com", "yunjiema@gmail.com", "karenshu@gmail.com", "brett.warne@gmail.com", "winkler.em@gmail.com", "niv.chandra@gmail.com", "ravdawg@gmail.com", "melty710@gmail.com", "irenefan@gmail.com", "jen.lee.ing@gmail.com", "wysun07@gmail.com", "wenfai@gmail.com", "shi.jiarui@gmail.com", "jtaschereau84@gmail.com", "hkorre@gmail.com", "jlee08@gmail.com"]};
+
         var data = new google.visualization.DataTable(jsonOutput);
-/*         var xLabels = jsonOutput[0];
-        var values = jsonOutput[1]; */
-        //data.addRows(xLabels.length);
+
         
         var xLabels = jsonOutput.labels;
         var values = jsonOutput.y;
@@ -128,13 +68,21 @@ ul {
 		 new google.visualization.ColumnChart(document.getElementById('visualization')).
             draw(data,
                  {title:"Eugene's Emails in 2011", 
-                  width:630, height:200,
-                  hAxis: {title: "Year"}}
+                  width:600, height:200,
+				  legend: "none", 
+				  vAxis: {title : "# Emails"},
+                  hAxis: {title: "Year", slantedTextAngle: 90, showTextEvery: 6}
+				 }
+
             ); 
       }
       
 
-      google.setOnLoadCallback(byHour);
+
+      $(document).ready(function() { 
+		byHour("2010-1-1", "2011-1-1");
+	  	makeDateSlider("#dateslider", {bounds:{min:new Date(2004,0,1), max:new Date(2012,0,1)}});
+	});
     </script>
 	
 <!--END GRAPH CRAP-->
@@ -159,11 +107,18 @@ ul {
 </div>
 <div id="results">
 	<div class="category" id="general">General Stats</div>
-		     <div id="visualization"></div>
-		<div class="description">This shows the average number of emails you send over time. Higher number = more emails sent. </div>
+	<div id="visualization"></div>
+	<form action="#"><!--<input name="min" /><input name="max" />-->
+		<div id="dateslider" class="dateSlider"></div> 
+  	</form>
+	<div class="description">This shows the average number of emails you send over time. Higher number = more emails sent. </div>
 	<div class="category" id="re_overall">Personal Response Time</div>
-		<!--INSERTGRAPH--><img src="" width="500px" height="300px" alt="graph here"/>
-		<div class="description">peepeeppee
+	<!--INSERTGRAPH-->
+	<img src="" width="900px" height="300px" alt="graph here"/>
+	<div class="description">peepeeppee</div>
+</div>
+</body>
+</html>
 	
 	
 	
