--- a/liamgwebapp/templates/emailanalysis/testautocomplete.html
+++ b/liamgwebapp/templates/emailanalysis/testautocomplete.html
@@ -6,8 +6,30 @@
 <script type="text/javascript" src="/media/js/jquery.js"></script>
 <script type="text/javascript" src="/media/js/jquery-ui.js"></script>
 <script type="text/javascript" src="/media/js/base.js"></script>
+<script type="text/javascript" src="/media/jQRangeSlider/jQDateRangeSlider.js"></script>
 
 <script type="text/javascript" charset="utf-8">
+
+// default constructor
+$("#element").dateRangeSlider();
+
+// Equivalent to
+$("#element").dateRangeSlider({
+  defaultValues:{min:new Date(2010,1,111), max:new Date(2011,1,11)},
+  bounds:{min:new Date(2010,0,1), max:new Date(2012,0,1)},
+  wheelMode: null,
+  wheelSpeed: 8,
+  arrows: true,
+  valueLabels: "show",
+  formatter: function(value){
+    var month = value.getMonth() + 1;
+    var day = value.getDate();
+    return "" + value.getFullYear() + "-" + (month < 10 ? "0" + month : month) + "-" + (day < 10 ? "0" + day : day);
+  },
+  durationIn: 0,
+  durationOut: 400,
+  delayOut: 200
+});
 
         $(document).ready(function() { 
    
@@ -21,6 +43,8 @@
 <title>Facelist</title>
 </head>
 <body>
+	
+	
 
 <input class="maininput" id="tags" type="text" style="width:500px" />
 
