created top senders viz

--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -81,7 +81,7 @@
 
       $(document).ready(function() { 
 		byHour("2010-1-1", "2011-1-1");
-	  	makeDateSlider("#dateslider", {bounds:{min:new Date(2004,0,1), max:new Date(2012,0,1)}});
+	  	makeDateSlider("#dateslider", {bounds:{min:new Date(2004,0,1), max:new Date(2012,0,1)}}, byHour);
 	});
     </script>
 	
