--- a/liamgwebapp/templates/emailanalysis/testautocomplete.html
+++ b/liamgwebapp/templates/emailanalysis/testautocomplete.html
@@ -6,6 +6,7 @@
 <script type="text/javascript" src="/media/js/jquery.js"></script>
 <script type="text/javascript" src="/media/js/jquery-ui.js"></script>
 <script type="text/javascript" src="/media/js/base.js"></script>
+<script type="text/javascript" src="/media/jQRangeSlider/jQRangeSlider.js"></script>
 <script type="text/javascript" src="/media/jQRangeSlider/jQDateRangeSlider.js"></script>
 
 <script type="text/javascript" charset="utf-8">
@@ -31,11 +32,11 @@ $("#element").dateRangeSlider({
   delayOut: 200
 });
 
-        $(document).ready(function() { 
+ $(document).ready(function() { 
    
-        $.getJSON("http://localhost:8000/emailanalysis/contacts/json/", 
+        $.getJSON("/emailanalysis/contacts/json/", 
         function(data) {
-			make_autocomplete("tags", data);
+				make_autocomplete("tags", data);
 			});
 		});
 
