modified log in to allow you to enter your gmail username/password can also enter default to just use default db

--- a/liamgwebapp/templates/emailanalysis/login.html
+++ b/liamgwebapp/templates/emailanalysis/login.html
@@ -1,3 +1,4 @@
+<b>Input your gmail username and password</b>
 <form action="/emailanalysis/login/submit/" method="post">{% csrf_token %}
 {{ form.as_p }}
 <input type="submit" value="Submit" />
