moved fonts and images

--- a/liamgwebapp/templates/emailanalysis/home.html
+++ b/liamgwebapp/templates/emailanalysis/home.html
@@ -8,11 +8,11 @@
 <style type="text/css">
 @font-face {
     font-family: 'nevisBold';
-    src: url('font/nevis-webfont.eot');
-    src: url('font/nevis-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/nevis-webfont.woff') format('woff'),
-         url('font/nevis-webfont.ttf') format('truetype'),
-         url('font/nevis-webfont.svg#nevisBold') format('svg');
+    src: url('/media/font/nevis-webfont.eot');
+    src: url('/media/font/nevis-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/media/font/nevis-webfont.woff') format('woff'),
+         url('/media/font/nevis-webfont.ttf') format('truetype'),
+         url('/media/font/nevis-webfont.svg#nevisBold') format('svg');
     font-weight: normal;
     font-style: normal;
 	}
@@ -20,7 +20,7 @@ body {
 	width:900px;
 	margin-left:auto;
 	margin-right:auto;
-	background:url('bg.jpg') repeat-x;
+	background:url('/media/images/bg.jpg') repeat-x;
 	font-family:Verdana;
 	font-size:12px;
 	text-align:center;
@@ -69,10 +69,10 @@ body {
 	width:166px;
 	height:43px;
 	border:none;
-	background:url('cta.jpg') no-repeat;
+	background:url('/media/images/cta.jpg') no-repeat;
 }
 .button:active {
-	background:url('cta_active.jpg') no-repeat;
+	background:url('/media/images/cta_active.jpg') no-repeat;
 }
 #clickme {
 	margin-left:auto;
@@ -85,7 +85,7 @@ body {
 <body>
 <div class="box">
 	<div id="logo">
-		<img src="logo-sm.png" />
+		<img src="/media/images/logo-sm.png" />
 	</div>
 	<div id="login">
 	<form method="" action="">
