--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -16,11 +16,13 @@
     font-weight: normal;
     font-style: normal;
 	}
+@font-face {
+	}
 body {
 	width:900px;
 	margin-left:auto;
 	margin-right:auto;
-	background:url('{{MEDIA_URL}}images/bg.jpg') repeat-x;
+	background:url('/media/images/bg.jpg') repeat-x;
 	font-family:Verdana;
 	font-size:12px;
 	}
@@ -29,6 +31,8 @@ body {
 	text-decoration:none;
 	}
 #dashboard {
+	font-weight:bold;
+	color:#555555;
 	float:left;
 	width:190px;
 	height:100%;
@@ -51,9 +55,12 @@ body {
 	box-shadow: 5px 5px 1px #B5B7B9;
 }
 ul {
-	margin-left:-25px;
+	margin-left:-20px;
 	list-style:none;
 }
+li {
+	padding-bottom:5px;
+	}
 .category {
 	padding-left:15px;
 	font-family:nevisBold;
@@ -65,6 +72,20 @@ ul {
 }
 .description {
 	margin-bottom: 10px;
+}
+#overview {
+	border-bottom:1px #B5B7B9 solid;
+	}
+.top_list {
+	padding-left:2px;
+	padding-top:2px;
+	color:#000000;
+}
+#selected {
+	border-left:2px #999999 solid;
+	color:white;
+	background-color:#555555;
+}
 </style>
 
 <!--GRAPH CODE-->
@@ -75,66 +96,72 @@ ul {
       google.load('visualization', '1', {packages: ['corechart']});
     </script>
 <script type="text/javascript">
-    function byHour(){
-    	$.getJSON("/emailanalysis/byhour/json/", {start:"2010-9-20", end:"2011-3-10", daysofweek:"0,6"}, function(data){
-    		drawVisualization(data);
-    	});
-    };
-    function initVisualization(){
-     	$.getJSON("/emailanalysis/topsenders/json/",{},function(data){
-    		 drawVisualization(data);
-/*     		$.each(data, function(i,item) {
-    		 
-    		alert(item);
-    		 
-    		}); */
-    	}); 
-    };
-/*         $.ajax({
-      	  url: 'http://192.168.201.237:8000/emailanalysis/example/json/',
-      	  type: 'POST',
-      	  dataType: 'json',//this is important
-      	  success: function(result) {
-      	    //this is not vital, but it's nice to check the response
-      	    if(typeof result === "object" && result.status === "ok"){
-      	        graphData = result;
-      	        drawVisualization();
-      	    }
-      	  }
-      	}); */
-   // }
-      function drawVisualization(jsonOutput) {
-        // Create and populate the data table.
+    var chartsData = {};
+    google.setOnLoadCallback(initCharts);
 
-//         var jsonOutput = {"y": [25.0, 18.0, 17.0, 16.0, 18.0, 11.0, 10.0, 4.0, 7.0, 4.0, 4.0, 12.0, 11.0, 21.0, 39.0, 33.0, 44.0, 53.0, 72.0, 57.0, 58.0, 34.0, 31.0, 33.0],
-//				"labels": ["2000-01-01 00:00:00", "2000-01-01 01:00:00", "2000-01-01 02:00:00", "2000-01-01 03:00:00", "2000-01-01 04:00:00", "2000-01-01 05:00:00", "2000-01-01 06:00:00", "2000-01-01 07:00:00", "2000-01-01 08:00:00", "2000-01-01 09:00:00", "2000-01-01 10:00:00", "2000-01-01 11:00:00", "2000-01-01 12:00:00", "2000-01-01 13:00:00", "2000-01-01 14:00:00", "2000-01-01 15:00:00", "2000-01-01 16:00:00", "2000-01-01 17:00:00", "2000-01-01 18:00:00", "2000-01-01 19:00:00", "2000-01-01 20:00:00", "2000-01-01 21:00:00", "2000-01-01 22:00:00", "2000-01-01 23:00:00"]};
-         
-         
-         //var jsonOutput = {[304, 257, 160, 125, 87, 71, 70, 68, 67, 64, 59, 57, 55, 54, 53, 48, 47, 41, 38], ["sirrice@gmail.com", "shwang08@gmail.com", "tiffchen08@gmail.com", "farm.cp@gmail.com", "yunjiema@gmail.com", "karenshu@gmail.com", "brett.warne@gmail.com", "winkler.em@gmail.com", "niv.chandra@gmail.com", "ravdawg@gmail.com", "melty710@gmail.com", "irenefan@gmail.com", "jen.lee.ing@gmail.com", "wysun07@gmail.com", "wenfai@gmail.com", "shi.jiarui@gmail.com", "jtaschereau84@gmail.com", "hkorre@gmail.com", "jlee08@gmail.com"]};
-        var data = new google.visualization.DataTable(jsonOutput);
-/*         var xLabels = jsonOutput[0];
-        var values = jsonOutput[1]; */
-        //data.addRows(xLabels.length);
-        
-        var xLabels = jsonOutput.labels;
-        var values = jsonOutput.y;
-        data.addColumn('string', 'date');
-        data.addColumn('number', 'emails');
-        for(var i=0; i<xLabels.length;i++){
-        	data.addRow([xLabels[i], values[i]]);
-        }
-        
-        // Create and draw the visualization.
-		 new google.visualization.ColumnChart(document.getElementById('visualization')).
-            draw(data,
-                 {title:"Eugene's Emails in 2011", 
-                  width:630, height:200,
-                  hAxis: {title: "Year"}}
-            ); 
-      }
+   	function initCharts() {
+   	  setupData();
+   	  drawCharts();
+   	}
+    	
+    	
+   	function setupData(){
+   		var xLabels;
+   		var values;
+   		var jsonOutput;
+   		// by Hour
+   		//$.getJSON("http://192.168.201.237:8000/emailanalysis/byhour/json/", {}, function(jsonOutput){
+   	   		jsonOutput = {"y": [371.0, 318.0, 265.0, 324.0, 339.0, 306.0, 240.0, 183.0, 105.0, 58.0, 29.0, 49.0, 87.0, 196.0, 273.0, 347.0, 502.0, 527.0, 649.0, 595.0, 577.0, 518.0, 422.0, 386.0], "labels": ["2000-01-01 00:00:00", "2000-01-01 01:00:00", "2000-01-01 02:00:00", "2000-01-01 03:00:00", "2000-01-01 04:00:00", "2000-01-01 05:00:00", "2000-01-01 06:00:00", "2000-01-01 07:00:00", "2000-01-01 08:00:00", "2000-01-01 09:00:00", "2000-01-01 10:00:00", "2000-01-01 11:00:00", "2000-01-01 12:00:00", "2000-01-01 13:00:00", "2000-01-01 14:00:00", "2000-01-01 15:00:00", "2000-01-01 16:00:00", "2000-01-01 17:00:00", "2000-01-01 18:00:00", "2000-01-01 19:00:00", "2000-01-01 20:00:00", "2000-01-01 21:00:00", "2000-01-01 22:00:00", "2000-01-01 23:00:00"]};
+			chartsData.byHourChart = {};
+   	   		chartsData.byHourChart.data = new google.visualization.DataTable(jsonOutput);
+	        xLabels = jsonOutput.labels;
+	        values = jsonOutput.y;
+	        chartsData.byHourChart.data.addColumn('string', 'date');
+ 	        chartsData.byHourChart.data.addColumn('number', 'emails');
+   	        for(var i=0; i<xLabels.length;i++){
+   	         	chartsData.byHourChart.data.addRow([xLabels[i], values[i]]);
+   	        }
+   	             
+  	             // Create and draw the visualization.
+  	     		 new google.visualization.ColumnChart(document.getElementById('hourChart')).
+  	                 draw(chartsData.byHourChart.data,
+  	                      {title:"Emails in 2011 by Hour", 
+  	                       width:625, height:200,
+  	                       hAxis: {title: "Year"}}
+  	                 ); 
+   		//});
+   		
+ 		// by Latency
+   		//$.getJSON("http://192.168.201.237:8000/emailanalysis/byhour/json/", {lat:"true"}, function(jsonOutput){
+   	   		jsonOutput={"y": [0.099588106466693221, 0.15248402195203603, 0.15868749999493922, 0.17112297096784101, 0.18075661668499002, 0.22196895422967869, 0.22535204473921719, 0.30015033648395145, 0.29831360228182302, 0.28816191731663099, 0.25545019153826709, 0.17191704462415405, 0.078113292879157373, 0.086770833329753758, 0.075229828051485856, 0.078073233529732097, 0.08085297697698661, 0.062038376736516521, 0.092059418353150221, 0.091377470427106658, 0.082263062453055605, 0.099022705756077495, 0.09667538835499348, 0.10111335996017246], "labels": ["2000-01-01 00:00:00", "2000-01-01 01:00:00", "2000-01-01 02:00:00", "2000-01-01 03:00:00", "2000-01-01 04:00:00", "2000-01-01 05:00:00", "2000-01-01 06:00:00", "2000-01-01 07:00:00", "2000-01-01 08:00:00", "2000-01-01 09:00:00", "2000-01-01 10:00:00", "2000-01-01 11:00:00", "2000-01-01 12:00:00", "2000-01-01 13:00:00", "2000-01-01 14:00:00", "2000-01-01 15:00:00", "2000-01-01 16:00:00", "2000-01-01 17:00:00", "2000-01-01 18:00:00", "2000-01-01 19:00:00", "2000-01-01 20:00:00", "2000-01-01 21:00:00", "2000-01-01 22:00:00", "2000-01-01 23:00:00"]};
+			chartsData.byLatencyChart = {};
+   	   		chartsData.byLatencyChart.data = new google.visualization.DataTable(jsonOutput);
+	        xLabels = jsonOutput.labels;
+	        values = jsonOutput.y;
+	        chartsData.byLatencyChart.data.addColumn('string', 'date');
+ 	        chartsData.byLatencyChart.data.addColumn('number', 'emails');
+   	        for(var i=0; i<xLabels.length;i++){
+   	         	chartsData.byLatencyChart.data.addRow([xLabels[i], values[i]]);
+   	        }
+   	             
+  	             // Create and draw the visualization.
+  	     		 new google.visualization.ColumnChart(document.getElementById('latencyChart')).
+  	                 draw(chartsData.byLatencyChart.data,
+  	                      {title:"Email Response Rate in 2011", 
+  	                       width:625, height:200,
+  	                       hAxis: {title: "Year"}}
+  	                 );
+   		//});
+   	};
+
       
-
-      google.setOnLoadCallback(byHour);
+      function drawCharts() {
+    	  $(".chart_container").each(function() {
+    	    var id = $(this).attr("id");
+    	    if (chartsData[id])
+    	      chartsData[id].chart.draw(chartsData[id].data, chartsData[id].options);
+    	  });
+    	}
     </script>
 	
 <!--END GRAPH CRAP-->
@@ -143,45 +170,33 @@ ul {
 	
 <body>
 <div id="logo">
-	<a href=""><img src="{{MEDIA_URL}}images/logo-sm.png" /></a>
+	<a href=""><img src="/media/images/logo-sm.png"/></a> <!--{{MEDIA_URL}}images/logo-sm.png-->
 </div>
 <div id="dashboard">
 	<ul>
-	<li>General Stats</li>
-	<li>Response Time</li>
+	<li class="top_list">Overview</li>
+		<ul id="overview">
+		<li>Top Email Contacts<!--Ranked by # of emails in conversation over a specific time--></li>
+		<li>Amount of Responses<!--# of emails people send you over a time range--></li>
+		</ul>
+	<li class="top_list">Time-Based Metrics</li>
 		<ul>
-		<li>Sending Overall</li>
-		<li>Sending by Person</li>
-		<li>Receiving by Person</li>
+		<li>Response Time<!--People's average response time to you over a time range--></li>
+		<li>Response Rate<!--% of time people will respond to you over a time range--></li>
 		</ul>
 	</ul>
 	
 </div>
 <div id="results">
-	<div class="category" id="general">General Stats</div>
-		     <div id="visualization"></div>
+	<div class="category" id="general">Email Received</div>
+		<div class="chart_container" id="hourChart"></div>
 		<div class="description">This shows the average number of emails you send over time. Higher number = more emails sent. </div>
-	<div class="category" id="re_overall">Personal Response Time</div>
-		<!--INSERTGRAPH--><img src="" width="500px" height="300px" alt="graph here"/>
-		<div class="description">peepeeppee
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	<div class="category" id="topcontacts">Top Email Contacts</div>
+		<!--TOP FRIENDS HERE-->
+		<div class="description">Shows you who you are most frequently in contact with.</div>
+</div>
+</body>
+</html>
 	
 	
 	
