--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -188,12 +188,18 @@ li {
 	
 </div>
 <div id="results">
-	<div class="category" id="general">Email Received</div>
+	<div class="category" id="general">Amount of Responses</div>
 		<div class="chart_container" id="hourChart"></div>
 		<div class="description">This shows the average number of emails you send over time. Higher number = more emails sent. </div>
 	<div class="category" id="topcontacts">Top Email Contacts</div>
 		<!--TOP FRIENDS HERE-->
 		<div class="description">Shows you who you are most frequently in contact with.</div>
+	<div class="category" id="responsetime">Response Time</div>
+		<div class="chart_container" id="latencyChart"></div>
+		<div class="description">whatever</div>
+	<div class="category" id="responserate">Response Rate</div>
+		<div class="chart_container" id=""></div>
+		<div class="description">This </div>
 </div>
 </body>
 </html>
