--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -112,7 +112,7 @@ google.setOnLoadCallback(init);
 
 	<div style="height: 20pt;">	&nbsp;</div>
 
-		<div style="width:500px; height:30px; display: inline; clear:both;" id="dateslider" class="dateSlider"></div>
+		<div style="width:500px; height:30px;" id="dateslider" class="dateSlider"></div>
 		  <div><form id="filterform" onSubmit="filterByEmail(); return false;">
 			<input class="maininput" name="emailFilter" id="contacts_list" type="text" style="width:500px" /> 
 		   	<input type="submit" id="saveButton" value="Filter"></input>
