--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -84,7 +84,7 @@ google.setOnLoadCallback(init);
 </head>
 	
 <body>
-	
+	<div id="main">
 <div id="logo">
 	<a href=""><img src="/media/images/logo-sm.png"/></a> <!--{{MEDIA_URL}}images/logo-sm.png-->
 </div>
@@ -129,6 +129,8 @@ google.setOnLoadCallback(init);
 	<div class="category" id="responserate">Response Rate</div>
 		<div class="description">This </div>
 		<div class="chart_container" id=""></div>
+
+</div>
 
 </div>
 </body>
