updated controls color

--- a/liamgwebapp/media/css/style.css
+++ b/liamgwebapp/media/css/style.css
@@ -93,8 +93,8 @@ li {
 	background-color:rgba(255,255,255,0.9);
 	border-radius:5px 0 0 0;
 	-moz-border-radius:15px;
-	border-top: 3px solid #eef;
-	border-left: 3px solid #eef;	
+	border-top: 3px solid #aaa;
+	border-left: 3px solid #aaa;	
 	background: #eef;
 	}
 .filtertext {
