updated controls color

--- a/liamgwebapp/media/css/style.css
+++ b/liamgwebapp/media/css/style.css
@@ -47,6 +47,7 @@ body {
 	-moz-border-radius:15px;
 	-webkit-box-shadow: 5px 5px 1px #B5B7B9;
 	box-shadow: 5px 5px 1px #B5B7B9;
+	margin-bottom: 50px;
 }
 ul {
 	margin-left:-20px;
