updated controls color

--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -110,7 +110,7 @@ function init() {
 
 
 	<div class="category" id="general">Amount of Responses</div>
-		<div class="description">This shows the average number of emails you send over time. Higher number = more emails sent. </div>
+		<div class="description">Number of emails you received. </div>
 		<div class="chart_container" id="hourChart"></div>
 
 	<div class="category" id="responsetime">Response Time</div>
