--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -86,19 +86,18 @@ function init() {
 	<a href=""><img src="/media/images/logo-sm.png"/></a> <!--{{MEDIA_URL}}images/logo-sm.png-->
 </div>
 <div id="dashboard">
+	<h1>Overview</h1>
 	<ul>
-	<li class="top_list">Overview</li>
-		<ul id="overview">
-		<li>Top Email Contacts<!--Ranked by # of emails in conversation over a specific time--></li>
-		<li>Amount of Responses<!--# of emails people send you over a time range--></li>
-		</ul>
-	<li class="top_list">Time-Based Metrics</li>
-		<ul>
-		<li>Response Time<!--People's average response time to you over a time range--></li>
-		<li>Response Rate<!-- of time people will respond to you over a time range--></li>
-		</ul>
+	<li>Top Email Contacts<!--Ranked by # of emails in conversation over a specific time--></li>
+	<li>Amount of Responses<!--# of emails people send you over a time range--></li>
 	</ul>
-	
+
+	<h1>Time-Based Metrics</h1>
+	<ul>
+	<li>Response Time<!--People's average response time to you over a time range--></li>
+	<li>Response Rate<!-- of time people will respond to you over a time range--></li>
+	</ul>
+
 </div>
 <div id="results">
 	
