--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -61,9 +61,9 @@ function updateDateRange(start, end) {
 
 
 function init() {	
-    $.getJSON("/emailanalysis/contacts/json/", function(data) {
-			make_autocomplete("contacts_list", data);
-		});
+    //$.getJSON("/emailanalysis/contacts/json/", function(data) {
+	//		make_autocomplete("contacts_list", data);
+	//	});
 	chartsData = {'hourChart' : setupChart('hourChart', "# Emails"),
 				'latencyChart' : setupChart('latencyChart', "Avg hours before reply")}
 	//filterByEmail();
