--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -112,6 +112,8 @@ function init() {
 	<li>Response Time<!--People's average response time to you over a time range--></li>
 	<li>Response Rate<!-- of time people will respond to you over a time range--></li>
 	</ul>
+	<h1><a href="/emailanalysis/logout/">Logout</h1>
+
 
 </div>
 <div id="results">
