--- a/liamgwebapp/media/css/style.css
+++ b/liamgwebapp/media/css/style.css
@@ -115,7 +115,7 @@ li {
 }
 
 a:link {text-decoration: none;}
-a:hover {text-decoration: underline;}
+a:hover {text-decoration:none;}
 a:visited {text-decoration: none;}
 
 
