--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -116,20 +116,20 @@ function init() {
 
 <div id="dashboard">
 	<h1><a href="/emailanalysis/results">Received E-Mail</a></h1>
-	<ul>
-	  <li><a href="/emailanalysis/results/#Top">Top Email Responders<!--Ranked by # of emails in conversation over a specific time--></a></li>
+	<!--<ul>
+	  <li><a href="/emailanalysis/results/#Top">Top Email Responders</a></li>
 	  <li><a href="/emailanalysis/results/#Count">Email Responses</a></li>
 	  <li><a href="/emailanalysis/results/#Time">Contacts' Response Time</a></li>
 	  <li><a href="/emailanalysis/results/#Rate">Contacts' Response Rate</a></li>
-	</ul>
+	</ul>-->
 
 	<h1><a href="/emailanalysis/results_sent">Sent E-Mail</a></h1>
-	<ul>
+	<!--<ul>
 	  <li><a href="/emailanalysis/results_sent/#Top">Top Email Contacts</a></li>
 	  <li><a href="/emailanalysis/results_sent/#Count">Sent Emails</a></li>
-	  <li><a href="/emailanalysis/results_sent/#Time">Your Response Time<!--People's average response time to you over a time range--></a></li>
-	  <li><a href="/emailanalysis/results_sent/#Rate">Your Response Rate<!-- of time people will respond to you over a time range--></a></li>
-	</ul>
+	  <li><a href="/emailanalysis/results_sent/#Time">Your Response Time</a></li>
+	  <li><a href="/emailanalysis/results_sent/#Rate">Your Response Rate</a></li>
+	</ul>-->
 	<h1><a href="/emailanalysis/logout/">Logout</h1>
 
 
