--- a/liamgwebapp/templates/emailanalysis/home.html
+++ b/liamgwebapp/templates/emailanalysis/home.html
@@ -93,7 +93,7 @@ body {
 		<div class="field">
 			Gmail Username: {{form.username}}<br />
 			Gmail Password: {{form.password}}<br />
-			Use Default?: {{form.defaultdb}}<br />
+			<!--Use Default?: {{form.defaultdb}}<br />-->
 		</div>
 		<p>
 		<div id="clickme">
