changed styling of tabs

--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -115,7 +115,7 @@ function init() {
 </div>
 
 <div id="dashboard">
-	<h1><a href="/emailanalysis/results">Received E-Mail</a></h1>
+  <h1><div class="tab"><a href="/emailanalysis/results">Received E-Mail</a></div></h1>
 	<!--<ul>
 	  <li><a href="/emailanalysis/results/#Top">Top Email Responders</a></li>
 	  <li><a href="/emailanalysis/results/#Count">Email Responses</a></li>
@@ -123,14 +123,14 @@ function init() {
 	  <li><a href="/emailanalysis/results/#Rate">Contacts' Response Rate</a></li>
 	</ul>-->
 
-	<h1><a href="/emailanalysis/results_sent">Sent E-Mail</a></h1>
+	<h1><div class = "tab"><a href="/emailanalysis/results_sent">Sent E-Mail</a></div></h1>
 	<!--<ul>
 	  <li><a href="/emailanalysis/results_sent/#Top">Top Email Contacts</a></li>
 	  <li><a href="/emailanalysis/results_sent/#Count">Sent Emails</a></li>
 	  <li><a href="/emailanalysis/results_sent/#Time">Your Response Time</a></li>
 	  <li><a href="/emailanalysis/results_sent/#Rate">Your Response Rate</a></li>
 	</ul>-->
-	<h1><a href="/emailanalysis/logout/">Logout</h1>
+	<h1><div class = "tab"><a href="/emailanalysis/logout/">Logout</a></div></h1>
 
 
 </div>
