--- a/liamgwebapp/media/css/style.css
+++ b/liamgwebapp/media/css/style.css
@@ -113,11 +113,14 @@ li {
 	float:left;
 	width:300px;
 }
+.tab a:hover{
+     color: black;
+}
 
-a:link {text-decoration: none;}
-a:hover {text-decoration:none;}
-a:visited {text-decoration: none;}
-
+a:link {text-decoration: none; color: #aaa;}
+a:hover {text-decoration:none; color: #aaa;}
+a:visited {text-decoration: none; color: #aaa;}
+a:active {color: #aaa;}
 
 #foo table {width: 100%;}
 
