--- a/liamgwebapp/templates/emailanalysis/results.html
+++ b/liamgwebapp/templates/emailanalysis/results.html
@@ -54,7 +54,7 @@ function filterByEmail(){
       {
          //add the other urls here to get the sent message statistics
          url_count_string = "{{url_count}}";
-
+         url_rate_string = "{{url_rate}}";
       }
 
       $.getJSON(url_count_string, opts, function(data){
