--- a/liamgwebapp/templates/emailanalysis/home.html
+++ b/liamgwebapp/templates/emailanalysis/home.html
@@ -45,7 +45,7 @@ body {
 	text-align:center;
 	}
 .field {
-	width:425px;
+	width:460px;
 	text-align:right;
 	font-family:nevisBold;
 	font-size:18px;
@@ -90,8 +90,8 @@ p {
 
 	<form action="/emailanalysis/login/submit/" method="post">{% csrf_token %}
 		<div class="field">
-			<p>Email: {{form.username}}</p>
-			Password: {{form.password}}
+			<p>Gmail Address: {{form.username}}</p>
+			Gmail Password: {{form.password}}
 			<!--Use Default?: {{form.defaultdb}}<br />-->
 		</div>
 		<div id="clickme">
